--- a/manifest.json
+++ b/manifest.json
@@ -1,19 +1,23 @@
 {
-    "content_scripts": [ {
-        "exclude_globs":    [  ],
-        "include_globs":    [ "*" ],
-		"css": ["styles.css","chosen/chosen/chosen.css"],
-        "js":               [ "jquery.min.js","chosen/chosen/chosen.jquery.min.js","main.js" ],
-        "matches":          [   "http://jira.au.fcl.internal/*",
-                                "https://jira.au.fcl.internal/*"],
-		"all_frames":true
-    } ],
-    "description":  "JIRA extensions",
-    "name":         "JIRA Plus Plus",
+    "content_scripts": [{
+        "exclude_globs": [],
+        "include_globs": ["*"],
+        "css": [],
+        "js": ["jquery.min.js", "yolo.js"],
+        "matches": ["http://www.github.com/*/pulls",
+            "https://www.github.com/*/pulls"
+        ],
+        "matches": ["http://github.com/*/pulls",
+            "https://github.com/*/pulls"
+        ],
+        "all_frames": true
+    }],
+    "description": "Github Additions",
+    "name": "Github Plus PLus",
     "permissions": [
-        "storage"
+        // "storage"
     ],
-    "version":      "1.0.0",
-    "options_page": "options/options.html",
+    "version": "1.0.0",
+    // "options_page": "options/options.html",
     "manifest_version": 2
 }
