updated Github++ name in manifest.json

--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,7 @@
         "all_frames": true
     }],
     "description": "Github Additions",
-    "name": "Github Plus PLus",
+    "name": "Github++",
     "permissions": [
         // "storage"
     ],
